# Pinetime

./: CMakeLists.txt  README.md  gcc_nrf52-mcuboot.ld  gcc_nrf52.ld
docker/: README.md  build.sh  demo_build.sh  demo_server.sh
docker/infinitime-image/: Dockerfile
docker/lvgl-emscripten/: CMakeLists.txt  Dockerfile  README.md
docker/pinetime-build/: Dockerfile
docs/: development.md  watch-api.md
freertos/: CMakeLists.txt  FreeRTOSConfig.h  FreeRTOSConfig.h.bak
include/: PinetimeLvglEvents.h
lvgl/: CMakeLists.txt  lv_conf.h
mynewt-nimble/: CMakeLists.txt
nimble/: CMakeLists.txt
nrfsdk/: CMakeLists.txt
src/: Activity.cpp  DefaultActivity.cpp  Face.hpp  GattServer.hpp  System.cpp  System.hpp  WatchIt.hpp  main.cpp
src.bak/: Version.h
src/activities/: README.md
src/activities/demo_benchmark/: CMakeLists.txt
src/activities/template/: CMakeLists.txt
src/apps/: WatchFace.hpp
src/apps/lv_benchmark/: CMakeLists.txt  lv_demo_benchmark.c  lv_demo_benchmark.h
src/apps/lv_demo_benchmark/: CMakeLists.txt
